<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>uk.gov.companieshouse</groupId>
        <artifactId>companies-house-parent</artifactId>
        <version>2.1.12</version>
        <relativePath/>
    </parent>

    <artifactId>certificates.orders.api.ch.gov.uk</artifactId>
    <version>unversioned</version>
    <name>certificates.orders.api.ch.gov.uk</name>
    <description>CH API handling CRUD operations on several item kinds for the CH Ordering Service</description>

    <properties>
        <java.version>21</java.version>
        <commons-lang3.version>3.17.0</commons-lang3.version>
        <commons-beanutils.version>1.11.0</commons-beanutils.version>
        <gson.version>2.13.1</gson.version>
        <guava.version>33.4.8-jre</guava.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <jakarta.json-api.version>2.1.3</jakarta.json-api.version>
        <johnzon-core.version>2.0.2</johnzon-core.version>
        <jakarta.json.version>1.1.7</jakarta.json.version>
        <jackson.version>2.19.1</jackson.version>
        <snakeyaml.version>2.4</snakeyaml.version>
        <commons-lang3.version>3.18.0</commons-lang3.version>
        <tomcat-embed-core.version>10.1.46</tomcat-embed-core.version>
        <opentelemetry-instrumentation-bom.version>2.16.0</opentelemetry-instrumentation-bom.version>

        <!--CH Libraries-->
        <structured-logging.version>3.0.32</structured-logging.version>
        <api-helper-java.version>3.0.1</api-helper-java.version>
        <api-sdk-manager-java-library.version>3.0.11</api-sdk-manager-java-library.version>
        <api-sdk-java.version>6.3.1</api-sdk-java.version>
        <api-security-java.version>2.0.8</api-security-java.version>
        <private-api-sdk-java.version>4.0.313</private-api-sdk-java.version>

        <start-class>uk.gov.companieshouse.certificates.orders.api.CertificatesApiApplication</start-class>

        <!-- Test -->
        <junit-platform-launcher.version>1.13.1</junit-platform-launcher.version>
        <junit-platform-commons.version>1.13.1</junit-platform-commons.version>
        <mockito-junit-jupiter.version>5.18.0</mockito-junit-jupiter.version>
        <hamcrest.version>3.0</hamcrest.version>
        <spring-cloud-contract-wiremock.version>4.3.0</spring-cloud-contract-wiremock.version>
        <powermock-api-mockito2.version>2.0.9</powermock-api-mockito2.version>
        <commons-io.version>2.19.0</commons-io.version>
        <system-stubs-core.version>2.1.8</system-stubs-core.version>
        <testcontainers-bom.version>1.21.2</testcontainers-bom.version>

        <!-- Docker -->
        <jib-maven-plugin.version>3.4.6</jib-maven-plugin.version>

        <!-- Spring -->
        <spring-boot-dependencies.version>3.5.3</spring-boot-dependencies.version>
        <spring-boot-maven-plugin.version>3.5.3</spring-boot-maven-plugin.version>
        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>

        <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>

        <!-- sonar config -->
        <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
        <sonar.java.binaries>${project.basedir}/target</sonar.java.binaries>
        <sonar.token>${CODE_ANALYSIS_TOKEN}</sonar.token>
        <sonar.login></sonar.login>
        <sonar.password></sonar.password>
        <sonar.projectKey>uk.gov.companieshouse:certificates.orders.api.ch.gov.uk</sonar.projectKey>
        <sonar.projectName>certificates.orders.api.ch.gov.uk</sonar.projectName>
        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml,
          ${project.basedir}/target/site/jacoco-it/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <sonar.jacoco.reports>${project.basedir}/target/site</sonar.jacoco.reports>
        <sonar.dependencyCheck.htmlReportPath>
          ${project.basedir}/target/dependency-check-report.html
        </sonar.dependencyCheck.htmlReportPath>
        <sonar.java.binaries>
          ${project.basedir}/target
        </sonar.java.binaries>

        <argLine>
            --add-opens java.base/java.util=ALL-UNNAMED
            --add-opens java.base/java.lang=ALL-UNNAMED
        </argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.opentelemetry.instrumentation</groupId>
                <artifactId>opentelemetry-instrumentation-bom</artifactId>
                <version>${opentelemetry-instrumentation-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>io.opentelemetry.instrumentation</groupId>
            <artifactId>opentelemetry-spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>${commons-beanutils.version}</version>
            <exclusions>
                <!--excluded to remove vulnerability-->
                <exclusion>
                    <groupId>commons-collections</groupId>
                    <artifactId>commons-collections</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>

        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
            <version>${jakarta.json-api.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.parsson</groupId>
            <artifactId>jakarta.json</artifactId>
            <version>${jakarta.json.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jakarta-jsonp</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.johnzon</groupId>
            <artifactId>johnzon-core</artifactId>
            <version>${johnzon-core.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${snakeyaml.version}</version>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>structured-logging</artifactId>
            <version>${structured-logging.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>api-security-java</artifactId>
            <version>${api-security-java.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>api-helper-java</artifactId>
            <version>${api-helper-java.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>api-sdk-manager-java-library</artifactId>
            <version>${api-sdk-manager-java-library.version}</version>
            <exclusions>
                <!--excluded to remove vulnerability-->
                <exclusion>
                    <groupId>commons-collections</groupId>
                    <artifactId>commons-collections</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>api-sdk-java</artifactId>
            <version>${api-sdk-java.version}</version>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>private-api-sdk-java</artifactId>
            <version>${private-api-sdk-java.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-contract-wiremock</artifactId>
            <version>${spring-cloud-contract-wiremock.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito-junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>${powermock-api-mockito2.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>uk.org.webcompere</groupId>
            <artifactId>system-stubs-core</artifactId>
            <version>${system-stubs-core.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>uk.org.webcompere</groupId>
            <artifactId>system-stubs-jupiter</artifactId>
            <version>${system-stubs-core.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>mongodb</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <!--CVE-2025-48924-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <!--CVE-2025-52520(7.5), CVE-2025-53506(7.5), CVE-2025-48989(7.5)-->
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-core</artifactId>
            <version>${tomcat-embed-core.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib-maven-plugin.version}</version>
                <configuration>
                    <extraDirectories>
                        <paths>
                            <path>
                                <from>${project.basedir}/api-enumerations</from>
                                <into>/api-enumerations</into>
                            </path>
                        </paths>
                    </extraDirectories>
                    <container>
                        <expandClasspathDependencies>true</expandClasspathDependencies>
                    </container>
                    <from>
                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
                    </from>
                    <to>
                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/certificates.orders.api.ch.gov.uk:latest</image>
                    </to>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot-maven-plugin.version}</version>
                <configuration>
                    <mainClass>${start-class}</mainClass>
                    <layout>ZIP</layout>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <fork>true</fork>
                    <meminitial>128m</meminitial>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <maxmem>512m</maxmem>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <!-- other annotation processors -->
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
        </plugins>
    </build>

</project>
